--- a/src/pages/chat/index.hbs
+++ b/src/pages/chat/index.hbs
@@ -7,9 +7,9 @@
       <input type="text" class="search__input" placeholder="Поиск">
     </div>
     <div class="sidebar__list">
-      <div class="list__preview_message">
+      <ul class="list__preview_message">
 
-        <div class="preview_message" data-id="1">
+        <li class="preview_message" data-id="1">
           <div class="preview_message__avatar">
             <img src="https://img.freepik.com/free-vector/cute-mummy-gaming-cartoon-illustration-halloween-gaming-icon-concept_138676-1889.jpg?w=1380&t=st=1668431466~exp=1668432066~hmac=2f771042510842c2850d8d1f0f5781d1e1b06edc9010752936eedb809ef1cffc" alt="">
           </div>
@@ -23,9 +23,9 @@
             </div>
             <div class="preview_message__badge">1</div>
           </div>
-        </div>
+        </li>
 
-        <div class="preview_message" data-id="2">
+        <li class="preview_message" data-id="2">
           <div class="preview_message__avatar">
             <img src="https://img.freepik.com/free-vector/cute-mummy-gaming-cartoon-illustration-halloween-gaming-icon-concept_138676-1889.jpg?w=1380&t=st=1668431466~exp=1668432066~hmac=2f771042510842c2850d8d1f0f5781d1e1b06edc9010752936eedb809ef1cffc" alt="">
           </div>
@@ -39,9 +39,9 @@
             </div>
             <div class="preview_message__badge">3</div>
           </div>
-        </div>
+        </li>
 
-      </div>
+      </ul>
     </div>
   </aside>
   <main class="chat__messages">
