--- a/src/pages/profile/edit.hbs
+++ b/src/pages/profile/edit.hbs
@@ -15,8 +15,8 @@
     <div class="profile__fields">
       {{> field name="email" label="Почта" value="ivanivanov@yandex.ru"}}
       {{> field name="login" label="Логин" value="ivanivanov"}}
-      {{> field name="name" label="Имя" value="Иван"}}
-      {{> field name="surname" label="Фамилия" value="Иванов"}}
+      {{> field name="first_name" label="Имя" value="Иван"}}
+      {{> field name="second_name" label="Фамилия" value="Иванов"}}
       {{> field name="phone" label="Телефон" value="+7 (909) 967 30 30"}}
     </div>
 
