--- a/src/pages/profile/password.hbs
+++ b/src/pages/profile/password.hbs
@@ -14,8 +14,8 @@
     </button>
     <div class="profile__fields">
       {{> input name="old_password" label="Старый пароль" value="ivanivanov@yandex.ru" type="password"}}
-      {{> input name="password" label="Новый пароль" value="ivanivanov" type="password"}}
-      {{> input name="password_again" label="Повторите новый пароль" value="Иван" type="password"}}
+      {{> input name="new_password" label="Новый пароль" value="ivanivanov" type="password"}}
+      {{> input name="new_password_again" label="Повторите новый пароль" value="Иван" type="password"}}
     </div>
     
     {{> button onClick="renderPage('account')" label="Сохранить"}}
