--- a/src/pages/profile/sign_up.hbs
+++ b/src/pages/profile/sign_up.hbs
@@ -3,8 +3,8 @@
   <div class="auth__content">
     {{> input name="email" label="Почта" value="ivanivanov@yandex.ru" type="email"}}
     {{> input name="login" label="Логин" value="ivanivanov" type="text"}}
-    {{> input name="name" label="Имя" value="Иван" type="text"}}
-    {{> input name="surname" label="Фамилия" value="Иванов" type="text"}}
+    {{> input name="first_name" label="Имя" value="Иван" type="text"}}
+    {{> input name="second_name" label="Фамилия" value="Иванов" type="text"}}
     {{> input name="phone" label="Телефон" value="+7 (909) 967 30 30" type="tel"}}
     {{> input name="password" label="Пароль" value="ivanivanov" type="password" error=true}}
     {{> input name="password_confirm" label="Пароль (еще раз)" value="ivanivanov" type="password" error="Пароли не совпадают"}}
