--- a/src/pages/chat/index.hbs
+++ b/src/pages/chat/index.hbs
@@ -44,9 +44,9 @@
       </ul>
     </div>
   </aside>
-  <main class="chat__messages">
+  <div class="chat__messages">
     <div class="messages__pick_action">
       Выберите чат чтобы отправить сообщение
     </div>
-  </main>
+  </div>
 </div>
