--- a/src/pages/profile/sign_in.hbs
+++ b/src/pages/profile/sign_in.hbs
@@ -1,9 +1,9 @@
 <div class="auth auth__sign_in">
   <h2 class="auth__title">Вход</h2>
-  <div class="auth__content">
+  <form class="auth__content" onSubmit="renderPage('chat')">
     {{> input name="login" label="Логин" value="ivanivanov" type="text"}}
     {{> input name="password" label="Пароль" value="ivanivanov" type="password"}}
-  </div>
+  </form>
   {{> button label="Авторизоваться" onClick="renderPage('chat')"}}
   <a onClick="renderPage('sign_up')" class="auth__link">Нет аккаунта?</a>
 </div>
