--- a/src/pages/profile/sign_up.hbs
+++ b/src/pages/profile/sign_up.hbs
@@ -1,6 +1,6 @@
 <div class="auth auth__sign_up">
   <h2 class="auth__title">Регистрация</h2>
-  <div class="auth__content">
+  <form class="auth__content" onSubmit="renderPage('sign_in')">
     {{> input name="email" label="Почта" value="ivanivanov@yandex.ru" type="email"}}
     {{> input name="login" label="Логин" value="ivanivanov" type="text"}}
     {{> input name="first_name" label="Имя" value="Иван" type="text"}}
@@ -8,7 +8,7 @@
     {{> input name="phone" label="Телефон" value="+7 (909) 967 30 30" type="tel"}}
     {{> input name="password" label="Пароль" value="ivanivanov" type="password" error=true}}
     {{> input name="password_confirm" label="Пароль (еще раз)" value="ivanivanov" type="password" error="Пароли не совпадают"}}
-  </div>
+  </form>
   {{> button label="Зарегистрироваться" onClick="renderPage('sign_in')"}}
   <a onClick="renderPage('sign_in')" class="auth__link">Войти</a>
 </div>
