--- a/src/pages/profile/sign_up.hbs
+++ b/src/pages/profile/sign_up.hbs
@@ -9,6 +9,6 @@
     {{> input name="password" label="Пароль" value="ivanivanov" type="password" error=true}}
     {{> input name="password_confirm" label="Пароль (еще раз)" value="ivanivanov" type="password" error="Пароли не совпадают"}}
   </form>
-  {{> button label="Зарегистрироваться" onClick="renderPage('sign_in')"}}
+  {{> button type="submit" label="Зарегистрироваться"}}
   <a onClick="renderPage('sign_in')" class="auth__link">Войти</a>
 </div>
