--- a/src/pages/profile/password.hbs
+++ b/src/pages/profile/password.hbs
@@ -16,8 +16,7 @@
       {{> input name="old_password" label="Старый пароль" value="ivanivanov@yandex.ru" type="password"}}
       {{> input name="new_password" label="Новый пароль" value="ivanivanov" type="password"}}
       {{> input name="new_password_again" label="Повторите новый пароль" value="Иван" type="password"}}
+      {{> button type="submit" label="Сохранить"}}
     </form>
-    
-    {{> button onClick="renderPage('account')" label="Сохранить"}}
   </div>
 </div>
