--- a/src/pages/profile/sign_in.hbs
+++ b/src/pages/profile/sign_in.hbs
@@ -3,7 +3,7 @@
   <form class="auth__content" onSubmit="renderPage('chat')">
     {{> input name="login" label="Логин" value="ivanivanov" type="text"}}
     {{> input name="password" label="Пароль" value="ivanivanov" type="password"}}
+    {{> button type="submit" label="Авторизоваться"}}
   </form>
-  {{> button type="submit" label="Авторизоваться" onClick="renderPage('chat')"}}
   <a onClick="renderPage('sign_up')" class="auth__link">Нет аккаунта?</a>
 </div>
