--- a/src/pages/profile/edit.hbs
+++ b/src/pages/profile/edit.hbs
@@ -10,7 +10,7 @@
       content: '',
       buttonLabel: 'Поменять'
     });">
-      <img src="https://img.freepik.com/free-vector/mysterious-mafia-man-smoking-cigarette_52683-34828.jpg?w=1380&t=st=1668431150~exp=1668431750~hmac=8d4d0abf35a97041992b41d7ebe3466896e126b9b70d5fb64615c30be0bf9432" alt="" class="avatar">
+      <img alt="avatar" src="https://img.freepik.com/free-vector/mysterious-mafia-man-smoking-cigarette_52683-34828.jpg?w=1380&t=st=1668431150~exp=1668431750~hmac=8d4d0abf35a97041992b41d7ebe3466896e126b9b70d5fb64615c30be0bf9432" alt="" class="avatar">
     </button>
     <div class="profile__fields">
       {{> field name="email" label="Почта" value="ivanivanov@yandex.ru"}}
