--- a/src/pages/chat/index.hbs
+++ b/src/pages/chat/index.hbs
@@ -11,7 +11,7 @@
 
         <li class="preview_message" data-id="1">
           <div class="preview_message__avatar">
-            <img src="https://img.freepik.com/free-vector/cute-mummy-gaming-cartoon-illustration-halloween-gaming-icon-concept_138676-1889.jpg?w=1380&t=st=1668431466~exp=1668432066~hmac=2f771042510842c2850d8d1f0f5781d1e1b06edc9010752936eedb809ef1cffc" alt="">
+            <img alt="avatar" src="https://img.freepik.com/free-vector/cute-mummy-gaming-cartoon-illustration-halloween-gaming-icon-concept_138676-1889.jpg?w=1380&t=st=1668431466~exp=1668432066~hmac=2f771042510842c2850d8d1f0f5781d1e1b06edc9010752936eedb809ef1cffc" alt="">
           </div>
           <div class="preview_message__data">
             <div class="preview_message__name">Киноклуб</div>
@@ -27,7 +27,7 @@
 
         <li class="preview_message" data-id="2">
           <div class="preview_message__avatar">
-            <img src="https://img.freepik.com/free-vector/cute-mummy-gaming-cartoon-illustration-halloween-gaming-icon-concept_138676-1889.jpg?w=1380&t=st=1668431466~exp=1668432066~hmac=2f771042510842c2850d8d1f0f5781d1e1b06edc9010752936eedb809ef1cffc" alt="">
+            <img alt="avatar" src="https://img.freepik.com/free-vector/cute-mummy-gaming-cartoon-illustration-halloween-gaming-icon-concept_138676-1889.jpg?w=1380&t=st=1668431466~exp=1668432066~hmac=2f771042510842c2850d8d1f0f5781d1e1b06edc9010752936eedb809ef1cffc" alt="">
           </div>
           <div class="preview_message__data">
             <div class="preview_message__name">Аниме</div>
