--- a/src/components/Form/Form.hbs
+++ b/src/components/Form/Form.hbs
@@ -6,6 +6,9 @@
   {{{phone}}}
   {{{password}}}
   {{{password_confirm}}}
+
+  {{{attachment}}}
+  {{{message}}}
   
-  {{#if isEditable}}{{{button}}}{{/if}}
+  {{#if readOnly}}{{else}}{{{button}}}{{/if}}
 </form>
