--- a/src/components/Popup/Popup.hbs
+++ b/src/components/Popup/Popup.hbs
@@ -2,7 +2,8 @@
 <div class="popup__centered">
   <div class="popup__title">{{title}}</div>
   <div class="popup__content">
+    {{content}}
     <input type="file">
   </div>
-  {{> button label="Применить" onClick="togglePopup()"}}
+  {{{button}}}
 </div>
