--- a/src/components/Field/Field.hbs
+++ b/src/components/Field/Field.hbs
@@ -4,7 +4,7 @@
     <div class="field__value">VALUE HERE {{value}}</div>
   </div>
 {{else}}
-  <div class="input {{#if error}}input--error{{/if}}">
+  <div class="input input--{{name}} {{#if error}}input--error{{/if}}" data-name="{{name}}">
     <label for="{{name}}">
       {{label}}
     </label>
