--- a/src/pages/Chat/Chat.hbs
+++ b/src/pages/Chat/Chat.hbs
@@ -1,7 +1,7 @@
 <div class="chat">
   <aside class="chat__sidebar">
     <div class="sidebar__header">
-      <a class="sidebar__profile_link" href="/profile/edit">Профиль</a>
+      <a class="sidebar__profile_link" href="/profile">Профиль</a>
     </div>
     <div class="search">
       <input type="text" class="search__input" placeholder="Поиск">
@@ -31,11 +31,36 @@
     </div>
   </aside>
   <div class="chat__messages">
-    {{#each messages}}
-      {{text}}
-    {{/each}}
-    <div class="messages__pick_action">
-      Выберите чат чтобы отправить сообщение
-    </div>
+    {{#if chatID}}
+      <div class="messages__header">
+        <div class="header__user">
+          <div class="user__avatar">
+            <img alt="avatar" src="{{companion.avatar_url}}" alt="">
+          </div>
+          <div class="user__username">{{companion.first_name}} {{companion.second_name}}</div>
+        </div>
+        <div class="header__chat_edit">
+          {{{chatEditButton}}}
+        </div>
+      </div>
+      <div class="messages__list">
+        {{#each messages}}
+          <div class="message" data-direction="{{direction}}">
+            {{text}}
+          </div>    
+        {{/each}}
+      </div>
+      <div class="messages__bottom send_message">
+        {{{newMessageForm}}}
+        <div class="send_message__messages__attachment"></div>
+        <div class="messages__input"></div>
+        <div class="messages__send">
+        </div>
+      </div>
+    {{else}}
+      <div class="messages__pick_action">
+        Выберите чат чтобы отправить сообщение
+      </div>
+    {{/if}}
   </div>
 </div>
