--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@ body {
 a {
   color: #3369F3;
   cursor: pointer;
+  text-decoration: none;
 }
 
 ul, li {
@@ -119,6 +120,22 @@ button {
   }
 }
 
+.header {
+  &__user {
+    display: flex;
+    align-items: center;
+    flex: 1;
+  }
+
+  &__chat_edit {
+    button {
+      border-radius: 8px;
+      padding: 4px 18px;
+      background: #ececec;
+    }
+  }
+}
+
 .chat {
   display: flex;
   width: 100%;
@@ -134,6 +151,8 @@ button {
   &__messages {
     display: flex;
     width: 100%;
+    padding: 0 20px;
+    flex-direction: column;
   }
 
   .messages__pick_action {
@@ -182,14 +201,87 @@ button {
     }
 
     &__badge {
-      background-color: #3369F3;
-      border-radius: 100%;
-      color: white;
-      width: 20px;
-      line-height: 20px;
+      color: #fff;
       text-align: center;
+      background-color: #3369f3;
+      border-radius: 10px;
       margin-top: 5px;
+      line-height: 20px;
+      width: fit-content;
+      padding: 0px 6px;
     }
+  }
+}
+
+.messages {
+  &__header,
+  &__bottom {
+    height: 54px;
+    display: flex;
+    align-items: center;
+  }
+
+  &__list {
+    flex: 1;
+    border-top: 2px solid #EAEAEA;
+    border-bottom: 2px solid #EAEAEA;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+  }
+}
+
+.message {
+  background: #f8f8f8;
+  max-width: 400px;
+  margin: 15px 0;
+  border-radius: 5px;
+  border: 1px solid #f1f1f1;
+  padding: 10px;
+  width: fit-content;
+
+  &[data-direction="1"] {
+    background: #E4EDFD;
+    border-color: #d7e6ff;
+    align-self: flex-end;
+  }
+}
+
+.send_message {
+  form {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+
+  .input {
+    &--attachment {
+      margin-bottom: 0;
+      input[type="file"] {
+        display: none;
+      }
+      label { font-size: 19px; }
+    }
+
+    &--message {
+      flex: 1;
+      margin: 0 20px;
+      label {display: none;}
+      input {
+        height: 30px;
+        line-height: 30px;
+      }
+    }
+  }
+
+  button {
+    cursor: pointer;
+    color: #fff;
+    background: #3369f3;
+    border: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 12px;
   }
 }
 
@@ -224,8 +316,12 @@ button {
   &__button {
     background: $accent-color;
     width: 28px;
-    height: 28px;
     border-radius: 100%;
+    color: #fff;
+    line-height: 28px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
   }
 }
 
@@ -257,6 +353,17 @@ button {
     display: block;
     background: none;
     position: relative;
+    border: 1px solid #f5f5f5;
+
+    input {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      z-index: 9;
+    }
 
     img {
       max-width: 100%;
@@ -370,4 +477,18 @@ button {
   &__content {
     margin-bottom: 15px;
   }
+}
+
+.user {
+  &__username {
+    font-size: 15px;
+    margin-left: 5px;
+  }
+
+  &__avatar {
+    width: 40px;
+    height: 40px;
+  
+    img { width: 100%; }
+  } 
 }
