--- a/src/pages/Error/Error.hbs
+++ b/src/pages/Error/Error.hbs
@@ -2,6 +2,6 @@
   <div class="global_error__centered">
     <div class="global_error__title">404</div>
     <div class="global_error__desc">Мы уже фиксим</div>
-    <a href="/chat">Назад к чатам</a>
+    <a href="/chat/">Назад к чатам</a>
   </div>
 </div>
