--- a/src/pages/Profile/Profile.hbs
+++ b/src/pages/Profile/Profile.hbs
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="side_action">
-    <a href="/chat" class="side_action__button">
+    <a href="/chat/" class="side_action__button">
       <
     </a>
   </div>
@@ -16,10 +16,10 @@
       </div>
 
       {{#if readOnly}}
-        <a class="profile__link" href="/profile/edit">Изменить данные</a>
-        <a class="profile__link" href="/auth/sign_in">Выйти</a>
+        <a class="profile__link" href="/profile/edit/">Изменить данные</a>
+        <a class="profile__link" href="/auth/sign_in/">Выйти</a>
       {{else}}
-        <a class="profile__link" href="/auth/sign_in">Выйти</a>
+        <a class="profile__link" href="/auth/sign_in/">Выйти</a>
       {{/if}}
     </div>
   </div>
