--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,8 @@ a {
   text-decoration: none;
 }
 
-ul, li {
+ul,
+li {
   margin: 0;
   padding: 0;
 }
@@ -33,7 +34,7 @@ input {
   box-sizing: border-box;
 
   &::placeholder {
-    color: #d3d3d3;
+    color: #D3D3D3;
   }
 }
 
@@ -56,8 +57,7 @@ button {
   border-radius: 12px;
   width: 340px;
   box-sizing: border-box;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
-
+  box-shadow: 0 0 6px rgb(0 0 0 / 0.14);
   margin: auto;
 
   &__title {
@@ -76,7 +76,7 @@ button {
     display: block;
     margin: 10px auto;
     background: none;
-    color: #3369f3;
+    color: #3369F3;
     text-align: left;
   }
 
@@ -103,18 +103,18 @@ button {
   input {
     width: 100%;
     border-bottom: 1px solid $accent-color;
-    
+
     &:required:valid {
-      border-color: rgb(46, 148, 46);
+      border-color: rgb(46 148 46);
     }
 
     &:not(:placeholder-shown):invalid {
-      border-color: rgb(237, 34, 34);
+      border-color: rgb(237 34 34);
     }
 
     &:not(:placeholder-shown):invalid + .input__error {
       opacity: 1;
-      color: #e86161;
+      color: #E86161;
     }
   }
 }
@@ -126,7 +126,7 @@ button {
   justify-content: space-between;
 
   &__value {
-    text-align:right;
+    text-align: right;
     color: $inactive-color;
   }
 }
@@ -142,7 +142,7 @@ button {
     button {
       border-radius: 8px;
       padding: 4px 18px;
-      background: #ececec;
+      background: #ECECEC;
     }
   }
 }
@@ -212,14 +212,14 @@ button {
     }
 
     &__badge {
-      color: #fff;
+      color: #FFFFFF;
       text-align: center;
-      background-color: #3369f3;
+      background-color: #3369F3;
       border-radius: 10px;
       margin-top: 5px;
       line-height: 20px;
       width: fit-content;
-      padding: 0px 6px;
+      padding: 0 6px;
     }
   }
 }
@@ -243,17 +243,17 @@ button {
 }
 
 .message {
-  background: #f8f8f8;
+  background: #F8F8F8;
   max-width: 400px;
   margin: 15px 0;
   border-radius: 5px;
-  border: 1px solid #f1f1f1;
+  border: 1px solid #F1F1F1;
   padding: 10px;
   width: fit-content;
 
   &[data-direction="1"] {
     background: #E4EDFD;
-    border-color: #d7e6ff;
+    border-color: #D7E6FF;
     align-self: flex-end;
   }
 }
@@ -268,6 +268,7 @@ button {
   .input {
     &--attachment {
       margin-bottom: 0;
+
       input[type="file"] {
         display: none;
       }
@@ -277,7 +278,8 @@ button {
     &--message {
       flex: 1;
       margin: 0 20px;
-      label {display: none;}
+      label { display: none; }
+
       input {
         height: 30px;
         line-height: 30px;
@@ -287,8 +289,8 @@ button {
 
   button {
     cursor: pointer;
-    color: #fff;
-    background: #3369f3;
+    color: #FFFFFF;
+    background: #3369F3;
     border: none;
     width: 30px;
     height: 30px;
@@ -328,7 +330,7 @@ button {
     background: $accent-color;
     width: 28px;
     border-radius: 100%;
-    color: #fff;
+    color: #FFFFFF;
     line-height: 28px;
     text-align: center;
     text-decoration: none;
@@ -349,7 +351,7 @@ button {
   }
 
   &__link {
-    border-bottom: 1px solid #eaeaea;
+    border-bottom: 1px solid #EAEAEA;
     padding: 10px 0;
     display: flex;
   }
@@ -357,14 +359,13 @@ button {
   &__avatar {
     width: 130px;
     height: 130px;
-    margin-bottom: 100px;
     border-radius: 100%;
     overflow: hidden;
     margin: 0 auto 50px;
     display: block;
     background: none;
     position: relative;
-    border: 1px solid #f5f5f5;
+    border: 1px solid #F5F5F5;
 
     input {
       position: absolute;
@@ -382,10 +383,9 @@ button {
     }
 
     &:hover {
-
-      &:before {
+      &::before {
         content: "Поменять";
-        color: #fff;
+        color: #FFFFFF;
         z-index: 2;
         font-weight: bold;
         font-size: 12px;
@@ -397,15 +397,15 @@ button {
         text-shadow: 1px 2px 3px black;
       }
 
-      &:after {
+      &::after {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0,0,0,.2);
+        background-color: rgb(0 0 0 / 0.2);
         z-index: 1;
-        content: '';
+        content: "";
       }
     }
   }
@@ -445,7 +445,7 @@ button {
 
   &__overlay {
     left: 0;
-    background: rgba(0,0,0,.2);
+    background: rgb(0 0 0 / 0.2);
     position: fixed;
     top: 0;
     width: 100vw;
@@ -457,11 +457,10 @@ button {
     width: 340px;
     height: 180px;
     background: #FFFFFF;
-    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+    box-shadow: 0 0 6px rgb(0 0 0 / 0.14);
     border-radius: 12px;
     padding: 30px;
     box-sizing: border-box;
-
     position: absolute;
     margin: auto;
     left: 0;
@@ -469,7 +468,7 @@ button {
     top: 0;
     bottom: 0;
     text-align: center;
-    
+
     .button {
       line-height: 37px;
       border-radius: 8px;
@@ -499,7 +498,7 @@ button {
   &__avatar {
     width: 40px;
     height: 40px;
-  
+
     img { width: 100%; }
-  } 
+  }
 }
