--- a/src/pages/Profile/Profile.hbs
+++ b/src/pages/Profile/Profile.hbs
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="side_action">
-    <a href="/chat/" class="side_action__button">
+    <a href="{{#if readOnly}}/chat/{{else}}/profile/{{/if}}" class="side_action__button">
       <
     </a>
   </div>
