--- a/src/components/Field/Field.hbs
+++ b/src/components/Field/Field.hbs
@@ -15,6 +15,8 @@
       id="{{name}}"
       placeholder="{{label}} пустой"
       title="Паттерн для ввода: {{pattern}}"
+      {{#if minlength}}minlength={{minlength}}{{/if}}
+      {{#if maxlength}}maxlength={{maxlength}}{{/if}}
       {{#if required}}required{{/if}}
       {{#if pattern}}pattern="{{pattern}}"{{/if}}
     />
