--- a/src/pages/Chat/Chat.hbs
+++ b/src/pages/Chat/Chat.hbs
@@ -1,7 +1,7 @@
 <div class="chat">
   <aside class="chat__sidebar">
     <div class="sidebar__header">
-      <a class="sidebar__profile_link" href="/profile/">Профиль</a>
+      <a class="sidebar__profile_link" href="https://timely-tapioca-23b764.netlify.app/#profile">Профиль</a>
     </div>
     <div class="search">
       <input type="text" class="search__input" placeholder="Поиск">
@@ -10,7 +10,7 @@
       <ul class="list__preview_message">
         {{#each chains}}
           <li class="preview_message" data-id="{{id}}">
-            <a class="preview_message__hashlink" href="#{{id}}">
+            <a class="preview_message__hashlink" href="#chat_{{id}}">
               <div class="preview_message__avatar">
                 <img alt="avatar" src="{{avatar_url}}" alt="">
               </div>
