--- a/src/pages/Chat/Chat.hbs
+++ b/src/pages/Chat/Chat.hbs
@@ -1,7 +1,7 @@
 <div class="chat">
   <aside class="chat__sidebar">
     <div class="sidebar__header">
-      <a class="sidebar__profile_link" href="https://timely-tapioca-23b764.netlify.app/#profile">Профиль</a>
+      <a class="sidebar__profile_link" href="/index.html#profile">Профиль</a>
     </div>
     <div class="search">
       <input type="text" class="search__input" placeholder="Поиск">
