--- a/src/pages/Profile/Profile.hbs
+++ b/src/pages/Profile/Profile.hbs
@@ -9,7 +9,7 @@
     <div class="profile__wrap">
       <button class="profile__avatar">
         <img alt="avatar" src="{{user.avatar_url}}" alt="" class="avatar">
-        <input type="file">
+        <input class="profile__avatar_attacher" type="file">
       </button>
       <div class="profile__fields">
         {{{inputs}}}
