--- a/src/pages/Chat/Chat.hbs
+++ b/src/pages/Chat/Chat.hbs
@@ -16,7 +16,7 @@
               </div>
               <div class="preview_message__data">
                 <div class="preview_message__name">{{user}}</div>
-                <div class="preview_message__text">{{last_message}}</div>
+                <div class="preview_message__text">{{title}}</div>
               </div>
               <div class="preview_message__info">
                 <div class="preview_message__date">
