--- a/src/pages/Chat/Chat.hbs
+++ b/src/pages/Chat/Chat.hbs
@@ -46,7 +46,7 @@
       <div class="messages__list">
         {{#each messages}}
           <div class="message" data-direction="{{direction}}">
-            {{text}}
+            {{text}}dsf
           </div>    
         {{/each}}
       </div>
