--- a/src/components/Field/Field.hbs
+++ b/src/components/Field/Field.hbs
@@ -1,7 +1,7 @@
 {{#if readOnly}}
   <div class="field">
     <div class="field__label">{{label}}</div>
-    <div class="field__value">VALUE HERE {{value}}</div>
+    <div class="field__value">{{value}}</div>
   </div>
 {{else}}
   <div class="input input--{{name}} {{#if error}}input--error{{/if}}" data-name="{{name}}">
