--- a/src/pages/Chat/Chat.hbs
+++ b/src/pages/Chat/Chat.hbs
@@ -12,11 +12,11 @@
           <li class="preview_message" data-id="{{id}}">
             <a class="preview_message__hashlink" href="#chat_{{id}}">
               <div class="preview_message__avatar">
-                <img alt="avatar" src="{{avatar_url}}" alt="">
+                <img alt="avatar" src="{{avatar}}" alt="">
               </div>
               <div class="preview_message__data">
-                <div class="preview_message__name">{{user}}</div>
-                <div class="preview_message__text">{{title}}</div>
+                <div class="preview_message__name">{{title}}</div>
+                <div class="preview_message__text">{{last_message.content}}</div>
               </div>
               <div class="preview_message__info">
                 <div class="preview_message__date">
