--- a/src/pages/Profile/Profile.hbs
+++ b/src/pages/Profile/Profile.hbs
@@ -8,7 +8,7 @@
   <div class="profile">
     <div class="profile__wrap">
       <button class="profile__avatar">
-        <img alt="avatar" src="{{user.avatar_url}}" alt="" class="avatar">
+        <img alt="avatar" src="{{user.avatar}}" alt="" class="avatar">
         <input class="profile__avatar_attacher" type="file">
       </button>
       <div class="profile__fields">
