--- a/src/components/Field/Field.hbs
+++ b/src/components/Field/Field.hbs
@@ -14,6 +14,7 @@
       defaultValue="{{value}}"
       type="{{type}}"
       id="{{name}}"
+      value="{{value}}"
       placeholder="{{label}} пустой"
       title="Паттерн для ввода: {{pattern}}"
       {{#if minlength}}minlength={{minlength}}{{/if}}
