--- a/src/pages/Profile/Profile.hbs
+++ b/src/pages/Profile/Profile.hbs
@@ -6,7 +6,9 @@
   <div class="profile">
     <div class="profile__wrap">
       <button class="profile__avatar">
-        <img alt="avatar" src="{{user.avatar}}" alt="" class="avatar">
+        {{#if user.avatar}}
+          <img alt="avatar" src="{{user.avatar}}" alt="" class="avatar">
+        {{/if}}
         <input class="profile__avatar_attacher" type="file">
       </button>
       <div class="profile__fields">
