--- a/src/pages/Profile/Profile.hbs
+++ b/src/pages/Profile/Profile.hbs
@@ -9,8 +9,8 @@
         {{#if user.avatar}}
           <img alt="avatar" src="{{user.avatar}}" alt="" class="avatar">
         {{/if}}
-        <input class="profile__avatar_attacher" type="file">
       </button>
+        {{{avatarUploader}}}
       <div class="profile__fields">
         {{{inputs}}}
       </div>
