--- a/src/styles.scss
+++ b/src/styles.scss
@@ -381,6 +381,7 @@ button {
     display: block;
     background: none;
     position: relative;
+    padding: 0;
     border: 1px solid $separator-color;
     background: $separator-color;
 
