--- a/src/pages/Chat/Chat.hbs
+++ b/src/pages/Chat/Chat.hbs
@@ -13,7 +13,7 @@
             <a class="preview_message__hashlink" href="#chat_{{id}}">
               <div class="preview_message__avatar">
                 {{#if companion.avatar_url}}
-                  <img alt="avatar" src="{{avatar}}" alt="">
+                  <img alt="avatar" src="https://ya-praktikum.tech/api/v2/resources/{{avatar}}" alt="">
                 {{/if}}
               </div>
               <div class="preview_message__data">
@@ -39,17 +39,10 @@
         <div class="header__user">
           <div class="user__avatar">
             {{#if activeChain.info.avatar}}
-              <img alt="avatar" src="{{activeChain.info.avatar}}" alt="">
+              <img alt="avatar" src="https://ya-praktikum.tech/api/v2/resources/{{activeChain.info.avatar}}" alt="">
             {{/if}}
           </div>
           <div class="user__username">{{activeChain.info.title}}</div>
-        </div>
-        <div class="header__chat_edit">
-          {{{chatEditButton}}}
-
-          {{#each participants}}
-            {{{this}}}
-          {{/each}}
         </div>
       </div>
       <div class="messages__list">
@@ -72,4 +65,37 @@
       </div>
     {{/if}}
   </div>
+  {{#if activeChain.participants}}
+    <div class="chat__participants">
+      <div class="participant__block_title">Участники</div>
+      {{#each activeChain.participants}}
+        <div class="participant">
+          <div class="participant__avatar">
+            {{#if avatar}}
+              <img alt="avatar" src="https://ya-praktikum.tech/api/v2/resources/{{avatar}}" alt="">
+            {{/if}}
+          </div>
+          <div class="participant__name">
+            {{first_name}} {{second_name}}
+          </div>
+          <div class="participant__action"></div>
+        </div>
+      {{/each}}
+
+      <div class="participant__suggest_title">Предложения</div>
+      {{#each activeChain.participants}}
+        <div class="participant">
+          <div class="participant__avatar">
+            {{#if avatar}}
+              <img alt="avatar" src="https://ya-praktikum.tech/api/v2/resources/{{avatar}}" alt="">
+            {{/if}}
+          </div>
+          <div class="participant__name">
+            {{first_name}} {{second_name}}
+          </div>
+          <div class="participant__action"></div>
+        </div>
+      {{/each}}
+    </div>
+  {{/if}}
 </div>
