--- a/src/pages/Chat/Chat.hbs
+++ b/src/pages/Chat/Chat.hbs
@@ -65,5 +65,9 @@
       </div>
     {{/if}}
   </div>
-  {{{participants}}}
+  <div class="chat__participants">
+    {{{participants}}}
+    {{{searchForm}}}
+    {{{participantSuggestions}}}
+  </div>
 </div>
