--- a/src/components/Participants/Participants.hbs
+++ b/src/components/Participants/Participants.hbs
@@ -1,4 +1,4 @@
-<div class="chat__participants">
-  <div class="participant__block_title">Участники</div>
+<div class="participants__list">
+  <div class="participant__block_title">{{title}}</div>
   {{{users}}}
 </div>
