--- a/src/styles.scss
+++ b/src/styles.scss
@@ -172,6 +172,16 @@ button {
   align-items: center;
   margin-bottom: 5px;
 
+  &__search {
+    height: 51px;
+    margin: 30px 0;
+    display: flex;
+    background: $main-background;
+    padding: 5px;
+    border: 1px solid $separator-color;
+    border-radius: 5px;
+  }
+
   &__avatar {
     width: 30px;
     height: 30px;
