--- a/src/components/Form/Form.hbs
+++ b/src/components/Form/Form.hbs
@@ -5,8 +5,8 @@
   {{{first_name}}}
   {{{second_name}}}
   {{{phone}}}
-  {{{password}}}
-  {{{password_confirm}}}
+  {{{oldPassword}}}
+  {{{newPassword}}}
 
   {{{attachment}}}
   {{{message}}}
