--- a/src/components/Field/Field.hbs
+++ b/src/components/Field/Field.hbs
@@ -1,8 +1,10 @@
 {{#if readOnly}}
-  <div class="field">
-    <div class="field__label">{{label}}</div>
-    <div class="field__value">{{value}}</div>
-  </div>
+  {{#unless hidden}}
+    <div class="field">
+      <div class="field__label">{{label}}</div>
+      <div class="field__value">{{value}}</div>
+    </div>
+  {{/unless}}
 {{else}}
   <div class="input input--{{name}} {{#if error}}input--error{{/if}}" data-name="{{name}}">
     <label class="input__label" for="{{name}}">
