--- a/src/styles.scss
+++ b/src/styles.scss
@@ -191,8 +191,9 @@ button {
     overflow: hidden;
 
     img {
-      max-width: 100%;
-      height: auto;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
@@ -265,8 +266,9 @@ button {
       overflow: hidden;
 
       img {
-        max-width: 100%;
-        height: auto;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
     }
 
@@ -461,8 +463,9 @@ button {
     }
 
     img {
-      max-width: 100%;
-      height: auto;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     &:hover {
@@ -585,6 +588,10 @@ button {
     background: $separator-color;
     border-radius: 100%;
 
-    img { width: 100%; }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
