--- a/src/components/Input/Input.hbs
+++ b/src/components/Input/Input.hbs
@@ -1,5 +1,5 @@
     <input
-      class="input__el {{className}}"
+      class="input__el {{class}}"
       name="{{name}}"
       defaultValue="{{value}}"
       type="{{type}}"
